more dependencies fixes